--- a/styles/Sea_Green/css/lime-admin-colors.css
+++ b/styles/Sea_Green/css/lime-admin-colors.css
@@ -611,9 +611,9 @@ fieldset[disabled] .btn-link:focus {
   color: #8a8a8a; }
 
 .btn:hover {
-  color: #333333; }
+  color: #fff; }
 .btn:focus {
-  color: #333333; }
+  color: #fff; }
 .btn:active {
   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125); }
 .btn.active {
