Adición funcionalidad configuración de plantillas
** CONTROLADORES
* Se modifica el controlador teacherissues.php para soportar las
funciones de configuración de plantillas de evaluación.
** MODELOS
* Se crea el modelo PlantillaEvaluación que mapea la tabla
plantillaevaluación en la base de datos.
* Se crea el modelo FuenteInformación que mapea la tabla
fuenteinformación en la base de datos.
* Se crea el modelo InformacionAdicional que mapea la tabla
informacionadicional en la base de datos
* Se crea el modelo InformacionAdicionalPregunta que mapea la tabla
informacionadicionalpregunta en la base de datos.
** VISTAS
* Se modifica la vista de templateConfiguration_view para soportar la
presentación de las plantillas existentes, eliminación, adición de
fuentes de información a una plantilla y creación de nuevas plantillas.
* Se crea la vista configurationInformationSource_view para soportar la
presentación de las fuentes de información existentes asociadas a una
plantilla, la adición, modificación y eliminación de fuentes de
información.
* Se crea la vista viewInformationSource_view para soportar la
presentación de 1 sola fuente de información con las respectivas
acciones de edición y eliminación.
* Se modifica la vista header para adicionar la libreria SweetAlert2
** SCRIPTS y CSS
* Se adiciona el .min.js y el .min.css de la librería SweetAlert2 para
implementar mensajes de alerta o configuración en la aplicación.
* Se modifican la regla de estilo css para la clase placeholder en los
ficheros lime-admin-colors.css y lime-admin-common.css  con el fin de
brindar compatibilidad con la librería SweetAler2 ya que al mostrar
mensajes de success no se visualizaba adecuadamente debido a los
archivos mencionados.

--- a/styles/Sea_Green/css/lime-admin-colors.css
+++ b/styles/Sea_Green/css/lime-admin-colors.css
@@ -1989,7 +1989,17 @@ input[type="text"], input[type="password"], .ui-autocomplete-input, textarea, .u
 .question-item {
   border: 1px solid #35363f; }
 
-.placeholder {
-  background-color: #84b39a; }
+/*
+ * CÓDIGO ORIGINAL
+ *.placeholder {
+  background-color: #84b39a; }*/
+/* Cambiado al siguiente bloque para efectos de contar con compatibilidad con la librería
+ * SweetAlert2 al momento de mostrar un mensaje de tipo success (como estaba en el código original
+ * no se mostraba el check verde)
+ * ANDRÉS DAVID MONTOYA AGUIRRE - CSNT - 02/06/2016
+ */
+input .placeholder {
+  background-color: #84b39a; 
+}
 
 /*# sourceMappingURL=lime-admin-colors.css.map */
